2009-02-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/TextEditor.cs: fixed "Bug 472714 -
	  MonoDevelop automatic indentation does not follow "Convert
	  tabs to spaces" option".

2009-02-03  David Makovský (Yakeen)  <yakeen@sannyas-on.net>

	* MonoDevelop.Ide.addin.xml: fixed typo

2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/MonoDevelopStatusBar.cs: Don't expect
	  markup in status bar messages by default.

	* MonoDevelop.Ide.Gui/StatusProgressMonitor.cs: Remove
	  unnecessary markup escaping.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.addin.xml: Added Report Bug link.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Ide.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.mdp: Flush.

2009-02-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.addin.xml: Move standard header and text
	  style panels to Source Code category.

2009-02-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs:
	  Add space between the comment (//) and the licence text.
2009-02-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Content/TextStylePolicy.cs: Add a
	  policy object for text styles.

	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.Gui.OptionPanels/TextStylePolicyPanel.cs:
	*
	  gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TextStylePolicyPanelWidget.cs:
	  Add a panel for editing TextStylePolicy objects.

	* MonoDevelop.Ide.addin.xml: Register TextStylePolicy panels.

	* Makefile.am:
	* MonoDevelop.Ide.mdp: Updated.

2009/02/01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.OptionPanels/GlobalAuthorInformationPanel.cs:
	  Store default author info correctly.

	* MonoDevelop.Ide.Gui/AuthorInformation.cs: Load copyright
	  value correctly.

2009-01-31  Andrés G. Aragoneses  <aaragoneses@novell.com>
