@@ -1,3 +1,14 @@
+2009-02-05  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs: Avoid duplicates
+	  in search results. Fixes bug 470393 - Some items show up
+	  twice in go-to-file dialog.
+
+	* MonoDevelop.Ide.Gui.Search/WholeCombineDocumentIterator.cs:
+	  Avoid duplicates in search results. Fixes bug 448849 -
+	  Search for "Project" on MonoDevelop solution finds
+	  duplicates matches.
+
 2009-02-05  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Ide.Gui/TextEditor.cs: fixed "Bug 472714 -
